# clyde-server

./: CMakeLists.txt  LICENSE  README.md  test_tq_debug.c
benchmarks/: CMakeLists.txt  bench_convert.c  bench_dequant.c  bench_parse.c
examples/: CMakeLists.txt  convert.c  read_gguf.c  read_safetensors.c
include/: bundle.h  convert.h  gguf.h  io_uring.h  safetensors.h  tensio.h  tq.h
include/sqlite/: vtable_gguf.h  vtable_safetensors.h  vtable_tq.h
src/: main.c
tests/: CMakeLists.txt  test_bundle.c  test_convert.c  test_gguf.c  test_safetensors.c  test_tq.c
